--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 
+		<!-- commons -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
+
 		<!-- tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
